Bug 100964 - Base GUI: No tables, queries, forms and reports are shown any more
Summary: Base GUI: No tables, queries, forms and reports are shown any more
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: bibisected, regression
: 100956 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-17 09:01 UTC by Robert Großkopf
Modified: 2016-10-25 18:39 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
output from "git bisect bad" and "git bisect log" (2.12 KB, text/plain)
2016-07-18 14:26 UTC, Terrence Enger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2016-07-17 09:01:27 UTC
Opened databases with this version:

Version: 5.3.0.0.alpha0+
Build ID: a2c557d80ac68c06ea59586245a7431e061938f0
CPU Threads: 4; OS Version: Linux 4.1; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-07-15_23:35:01
Locale: de-DE (de_DE.UTF-8); Calc: group

The whole part of the window for tables, queries, forms and reports is blank - without any header, without any content.

Impossible to work with a database with this version of LO.
Comment 1 Buovjaga 2016-07-18 10:47:38 UTC
*** Bug 100956 has been marked as a duplicate of this bug. ***
Comment 2 Buovjaga 2016-07-18 10:48:13 UTC
I also confirm this.

Win 7 Pro 64-bit Version: 5.3.0.0.alpha0+
Build ID: 28ac6fdc11559b58ac62089300aa99530b0b822d
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-07-18_02:54:20
Locale: fi-FI (fi_FI); Calc: CL
Comment 3 Alex Thurgood 2016-07-18 11:40:55 UTC
Also confirming in my 5.3 alpha master build
Comment 4 Terrence Enger 2016-07-18 14:22:41 UTC
Changing keyword bibisectRequest to bibisected.

Working in the daily Linux dbgutil bibisect repository on
debian-stretch, I see that the bug came in somewhere in the 66 commits
between ...

        commit   date        s-h
   good c0a7b9f  2016-06-27  74c01bb
   bad  120e803  2016-06-28  f07aa11
Comment 5 Terrence Enger 2016-07-18 14:26:07 UTC
Created attachment 126281 [details]
output from "git bisect bad" and "git bisect log"

Further to comment 4, I did my testing using embedded HSQLDB.
Comment 6 Commit Notification 2016-07-18 14:57:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ff4ce0796681c37822df5b5c5e4fbaeb09b37352

Resolves: tdf#100964 singlevalfields cleanup took wrong branch

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Robert Großkopf 2016-07-21 08:17:39 UTC
Tested with
Version: 5.3.0.0.alpha0+
Build ID: 0ccb3ccc4c7bafeb2fbbd689c90f710bc65d37e0
CPU Threads: 4; OS Version: Linux 4.1; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-07-20_23:34:15
Locale: de-DE (de_DE.UTF-8); Calc: group

Could see tables, queries, forms and reports now. Works as expected. Thanks to Caolán.