Resolves: tdf#100964 singlevalfields cleanup took wrong branch

regression since

commit 22864b44fd00b5a778ef597f8dfcb407d4166306
Date:   Fri Jun 24 12:57:04 2016 +0200

    loplugin:singlevalfields in dbaccess

Change-Id: Ie00bb7a8c2bc268dac876ff21657c987406dac7d